lab5/out
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c 3ac.cpp
3ac.cpp: In function ‘ac3* p_index(astree*, ac3_table*)’:
3ac.cpp:1096:1: warning: no return statement in function returning non-void [-Wreturn-type]
 1096 | }
      | ^
3ac.cpp:1094:22: warning: unused parameter ‘expr’ [-Wunused-parameter]
 1094 | ac3 *p_index(astree *expr, ac3_table *found){
      |              ~~~~~~~~^~~~
3ac.cpp:1094:39: warning: unused parameter ‘found’ [-Wunused-parameter]
 1094 | ac3 *p_index(astree *expr, ac3_table *found){
      |                            ~~~~~~~~~~~^~~~~
3ac.cpp: In function ‘void ac_globalvar(astree*, all_tables*)’:
3ac.cpp:1216:29: error: cannot convert ‘symbol_table*’ {aka ‘std::unordered_map<const std::__cxx11::basic_string<char>*, symbol*>*’} to ‘ac3_table*’ {aka ‘std::vector<ac3*>*’}
 1216 |   p_assignment(child,table->global,nullptr);
      |                      ~~~~~~~^~~~~~
      |                             |
      |                             symbol_table* {aka std::unordered_map<const std::__cxx11::basic_string<char>*, symbol*>*}
3ac.cpp:667:44: note:   initializing argument 2 of ‘ac3* p_assignment(astree*, ac3_table*, std::string*)’
  667 | ac3 *p_assignment(astree *expr, ac3_table *found, string *label){
      |                                 ~~~~~~~~~~~^~~~~
make: *** [Makefile:55: 3ac.o] Error 1
